# halide-cmake

./: CMakeLists.txt  README.md
cmake/: armhf.cmake
src/: CMakeLists.txt  main.cpp
src/kernel/: CMakeLists.txt  twice.cpp
